[package]
name = "wasp_bittorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = [ "derive" ] }
serde_derive = "1.0.144"
serde_bytes = "0.11.7"
#bendy = { version = "0.3.3", features = [ "std", "serde" ] }
anyhow = "1.0.63"
thiserror = "1.0.33"
hyper = { version = "0.14.20", features = [ "client", "http1", "tcp" ]}
urlencoding = "2.1.2"
serde_bencode = "0.2.3"
sha-1 = "0.10.0"
sha2 = "0.10.5"
semver = "1.0.13"
rand = "0.8.5"
log = "0.4.17"
