[package]
name = "wasp_bittorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = [ "derive" ] }
serde_derive = "1.0.144"
serde_bytes = "0.11.7"
serde_bencode = "0.2.3"
anyhow = "1.0.63"
thiserror = "1.0.33"
hyper = { version = "0.14.20", features = [ "client", "http1", "tcp" ]}
tokio = { version = "1.21.0", feature = "full" } #TODO: probably less features are needed
tokio-util = { version = "0.7.4", features = [  "codec" ] }
futures = "0.3.24"
urlencoding = "2.1.2"
sha-1 = "0.10.0"
sha2 = "0.10.5"
semver = "1.0.13"
rand = "0.8.5"
log = "0.4.17"
bytes = "1.2.1"
