[package]
name = "wasp_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bittorrent = { path = "../wasp_bittorrent", package = "wasp_bittorrent"}
tokio = {version = "1.21.0", features = [ "full" ] }
serde_bencode = "0.2.3"
simplelog = "0.12.0"
